--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -283,7 +283,7 @@ button:hover {
             display: inline-flex;
             position: relative;
             top: 2vh;
-            margin-left: -16%;
+            margin-left: -6%;
             max-width: 90%;
             margin-right: auto;
         }
