--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -1,5 +1,5 @@
 /* CSS Styles */
-.services {
+.serveContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: center;
     width:60%;
-    margin: 0 auto;
+    /* margin: 0 auto; */
     margin-bottom: 80px;
 }
 
